# gravity-claw

./: .env.example  .gitignore  .gravity-claw.config.json  CHANGELOG.md  CLAUDE.md  README.md  electron-builder.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  project.json  vite.config.ts
.github/workflows/: release.yml
electron/: main.mjs  preload.mjs
scripts/: apply-improvement.ps1  bundle-server.mjs  runtime-paths.mjs  runtime-paths.test.mjs  start-desktop-dev.mjs  start-inngest-dev.mjs
server/: .gravity-claw.config.json  package.json  tsconfig.json
server/src/: capability-policy.ts  config.test.ts  config.ts  cors.ts  emitters.ts  event-bus.ts  gateway.ts  gemini.ts  history.ts  index.ts  inngest-functions.ts  integrations.ts  kimi.ts  mcp-health.ts  mcp-status.test.ts  mcp.ts  memory.ts  skills.ts  soul.md  state.ts  system-metrics.ts  tasks.test.ts  tasks.ts  telegram.test.ts  telegram.ts  tool-registry.test.ts  tool-registry.ts  types-internal.ts
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: CommandPalette.css  CommandPalette.tsx
src/data/: skills.ts  systemProfile.ts
src/hooks/: useEventStream.ts  useKeyboardShortcuts.ts
src/lib/: authBridge.test.ts  authBridge.ts  liveApi.ts  runtime.test.ts  runtime.ts  runtimeConfig.ts  tauriBridge.ts
src/pages/: Chat.css  Chat.tsx  Console.css  Console.tsx  Dashboard.css  Dashboard.tsx  Settings.css  (+5 more)
(+38 files in other folders)
