[package]
name = "gravity-claw"
version = "0.2.0"
description = "AI agent orchestrator desktop application"
authors = ["Bruce Freshwater"]
edition = "2021"

[lib]
name = "gravity_claw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "io-util", "sync", "macros", "process", "time", "net"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
